[package]
authors = ["Richard Cook"]
description = "Logger and progress indicator"
homepage = "https://github.com/rcook/joat-logger-rs/"
license = "MIT"
name = "joat-logger"
version = "0.0.0"
edition = "2021"

[dependencies]
indicatif = "0.17.3"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["std"] }
uuid = { version = "1.3.3", features = ["v4"] }
