[package]
authors = ["Richard Cook"]
description = "Logger and progress indicator"
homepage = "https://github.com/rcook/joat-logger-rs/"
license = "MIT"
name = "joat-logger"
version = "0.0.2"
edition = "2021"

[dependencies]
indicatif = "0.17.6"
lazy_static = "1.4.0"
log = { version = "0.4.19", features = ["std"] }
uuid = { version = "1.4.1", features = ["v4"] }
